# ml-infra

./: .dvcignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: README.md  nextjs.yml  release.yml  tauri-app.yml
data/raw/: .gitignore
mlops/: .gitignore  README.md  main.py  requirements.txt
mlops/.dvc/: config
mlops/data/raw/: sample_raw_data.npz.dvc
mlops/mlruns/0/: meta.yaml
mlops/mlruns/328992611121975146/: meta.yaml
mlops/mlruns/328992611121975146/97ebab85dcab4cfca21509ca92c46463/: meta.yaml
mlops/mlruns/344322571351468695/: meta.yaml
mlops/mlruns/775649874024534115/: meta.yaml
mlops/models/: model_summary_52a68e2e46eb4fe0a55980f3fb5f1613.txt  model_summary_707a14f2a5694bbc96a56fe2498224a8.txt  model_summary_97ebab85dcab4cfca21509ca92c46463.txt
mlops/src/: model.py  train.py  utils.py
mlruns/0/: meta.yaml
mlruns/344322571351468695/52a68e2e46eb4fe0a55980f3fb5f1613/: meta.yaml
mlruns/344322571351468695/c38d9f13d19b47528b5f876f1599f7a7/: meta.yaml
mlruns/964947930133402319/: meta.yaml
mlruns/964947930133402319/2279e3febb8446b189cfe5431e140dbf/: meta.yaml
models/: model_summary_c38d9f13d19b47528b5f876f1599f7a7.txt
src/: data_ingestion.py  model.py  train.py  utils.py
tauri-monitoring/: Cargo.toml  README.md  package.json
tauri-monitoring/prometheus/: prometheus.yml
tauri-monitoring/scripts/: setup.sh
tauri-monitoring/src/: main.rs  metrics.rs  server.rs
tauri-monitoring/src-tauri/: Cargo.toml  tauri.conf.json
tauri-monitoring/src-tauri/src/: main.rs
(+72 files in other folders)
